--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 pyspark = "^3.1.1"
 deltalake = "^0.4.8"
 matplotlib = "^3.4.2"
+pandas = "^1.2.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
