--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ pyspark = "^3.1.1"
 deltalake = "^0.4.8"
 matplotlib = "^3.4.2"
 pandas = "^1.2.4"
+jupyter = "^1.0.0"
+ipykernel = "^6.0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
