--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ matplotlib = "^3.4.2"
 pandas = "^1.2.4"
 jupyter = "^1.0.0"
 ipykernel = "^6.0.3"
+datasets = "^1.11.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
