--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ jupyter = "^1.0.0"
 ipykernel = "^6.0.3"
 datasets = "^1.11.0"
 Pillow = "^9.0.1"
+xlrd = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
