--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,19 +6,19 @@ authors = ["pengfei <liu.pengfei@hotmail.fr>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pyspark = "^3.1.1"
-deltalake = "^0.4.8"
+pyspark = "3.3"
+# deltalake = "^0.4.8"
 matplotlib = "^3.4.2"
-pandas = "^1.2.4"
-jupyter = "^1.0.0"
-ipykernel = "^6.0.3"
-datasets = "^1.11.0"
-Pillow = "^9.0.1"
-xlrd = "^2.0.1"
-XlsxWriter = "^3.0.3"
+pandas = "^2.0.3"
+notebook = "^6.0.0"
+#datasets = "^1.11.0"
+#Pillow = "^9.0.1"
+#xlrd = "^2.0.1"
+#XlsxWriter = "^3.0.3"
+graphframes = "^0.6"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^7.4.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
