update projet dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ notebook = "^6.0.0"
 #xlrd = "^2.0.1"
 #XlsxWriter = "^3.0.3"
 graphframes = "^0.6"
+apache-sedona = {extras = ["spark"], version = "^1.4.1"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.0"
