update project dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ graphframes = "^0.6"
 apache-sedona = {extras = ["spark"], version = "^1.4.1"}
 geopandas = "0.11.1"
 shapely = "1.8.4"
+keplergl = "^0.3.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.0"
