--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ geopandas = "0.11.1"
 shapely = "1.8.4"
 keplergl = "^0.3.2"
 networkx = "^3.1"
+seaborn = "^0.13.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.4.0"
